--- a/ArduinoClient/ArduinoClient/App.xaml
+++ b/ArduinoClient/ArduinoClient/App.xaml
@@ -1,9 +1,35 @@
 ﻿<Application x:Class="ArduinoClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ArduinoClient"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <Style TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="pack://application:,,,/Fonts/#Minecraft"/>
+        </Style>
+
+        <Style TargetType="Control">
+            <Setter Property="FontFamily" Value="pack://application:,,,/Fonts/#Minecraft"/>
+        </Style>
+
+        <Style TargetType="Button" x:Key="PixelButtonStyle">
+            <Setter Property="Background" Value="LightBlue"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Padding" Value="10,5"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontFamily" Value="Courier New"/>
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="Height" Value="80"/>
+            <Setter Property="Width" Value="300"/>
+            
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect ShadowDepth="0" BlurRadius="0" Color="Black"/>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </Application.Resources>
 </Application>
