--- a/ArduinoClient/ArduinoClient/MainWindow.xaml
+++ b/ArduinoClient/ArduinoClient/MainWindow.xaml
@@ -1,12 +1,32 @@
 ﻿<Window x:Class="ArduinoClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Arduino Client" Height="200" Width="400"
-        Closing="Window_Closing">
+        Title="RockPaperScissors" WindowState="Maximized" Height="1080" Width="1920" Background="#FFF5E6">
     <Grid>
-        <TextBox x:Name="MessageToSend" HorizontalAlignment="Left" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" Width="260"/>
-        <Button Content="Send" HorizontalAlignment="Left" Margin="280,10,0,0" VerticalAlignment="Top" Width="80" Click="SendButton_Click"/>
-        <TextBox x:Name="ReceivedMessage" HorizontalAlignment="Left" Height="30" Margin="10,60,0,0" VerticalAlignment="Top" Width="350" IsReadOnly="True"/>
-        <Label Content="Received Message:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top"/>
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
+            <TextBlock x:Name="GameName" Text="Rock Paper Scissors" HorizontalAlignment="Center" FontSize="50" Visibility="Visible" Margin="0 0 0 50"/>
+            <TextBlock x:Name="CreateBy" Text="Created by Sobol K." HorizontalAlignment="Center" FontSize="30" Visibility="Visible" Margin="0 0 0 50"/>
+            <Button x:Name="EasyButton"  Content="Easy mode" Click="Easy_Mode_Click"  Visibility="Visible" Margin="10" Style="{StaticResource PixelButtonStyle}"/>
+            <Button x:Name="NormalButton" Content="Normal mode" Click="Normal_Mode_Click" Visibility="Visible" Margin="10" Style="{StaticResource PixelButtonStyle}"/>
+            <Button x:Name="ImpossibleButton" Content="Impossible mode" Click="Impossible_Mode_Click" Visibility="Visible" Margin="10" Style="{StaticResource PixelButtonStyle}"/>
+            <TextBlock x:Name="ChoiseText" Text="Make Your Choise:" HorizontalAlignment="Center" FontSize="30" Visibility="Collapsed"></TextBlock>
+            <StackPanel x:Name="MakeChoise" Orientation="Horizontal" Visibility="Visible">
+                <Button x:Name="Rock_Button"  Content="Rock" Click="ChoiseRock_Click"  Visibility="Collapsed" Margin=" 20" Style="{StaticResource PixelButtonStyle}"/>
+                <Button x:Name="Paper_Button" Content="Paper" Click="ChoisePaper_Click" Visibility="Collapsed" Margin=" 20" Style="{StaticResource PixelButtonStyle}"/>
+                <Button x:Name="Scissors_Button" Content="Scissors" Click="ChoiseScissors_Click" Visibility="Collapsed" Margin=" 20" Style="{StaticResource PixelButtonStyle}"/>
+
+                <StackPanel x:Name="GameOver_Menu" Orientation="Vertical" Visibility="Collapsed" Margin="10">
+                    <TextBlock Text="Result Of Game:" HorizontalAlignment="Center" FontSize="30"></TextBlock>
+                    <TextBlock x:Name="TextAferGame"  Text=" " HorizontalAlignment="Center" FontSize="25" Margin=" 0 10 0 0" ></TextBlock>
+                    <TextBlock Text="Your answer was:" HorizontalAlignment="Center" FontSize="30" Margin=" 0 30 0 0"></TextBlock>
+                    <TextBlock x:Name="Choise"  Text=" " HorizontalAlignment="Center" FontSize="25" Margin=" 0 10 0 0"></TextBlock>
+                    <TextBlock Text="AI answer was:" HorizontalAlignment="Center" FontSize="30" Margin=" 0 30 0 0"></TextBlock>
+                    <TextBlock x:Name="Responce"  Text=" " HorizontalAlignment="Center" FontSize="25" Margin=" 0 10 0 0"></TextBlock>
+                    <Button x:Name="OneMoreGame_Button"  Content="One More Time" Click="OneMoreGame_Click"  Margin=" 20" Style="{StaticResource PixelButtonStyle}"/>
+                    <Button x:Name="ChangeDif_Button" Content="Change Difficulty" Click="ChangeDif_Click"   Margin=" 20" Style="{StaticResource PixelButtonStyle}"/>
+                </StackPanel>
+            </StackPanel>
+            
+        </StackPanel>
     </Grid>
 </Window>
